# SDK_C-_VETOR

./: .gitignore  ExtrairGradiente.jsx  GradientManipulator.aex  GradientManipulator.cpp  GradientManipulator_PiPL.r  SimularOverlord.jsx  SplitGroup.jsx  SplitLayer.jsx  ae_debug.jsx  do_git.bat  documento.md  fix.py  fix2.py  fix_apos.py  gcky_test.txt  grad_batch_template.aepx  grad_data.json  gradient_template.aepx  guia_tecnico_overlord_caseiro.md  push.bat  test2.py  test_bt.jsx  tmp1.xml  tmp2.xml  tmp_gcky.xml
GradFixerInstaller/: cargo_errors.txt  package-lock.json  package.json
GradFixerInstaller/resources/AEGP/: ExtrairGradiente.jsx  GradientManipulator.ilk  SplitGroup.jsx  SplitLayer.jsx  ae_group_temp.aepx  grad_batch_template.aepx  grad_data.json  grad_debug.txt
GradFixerInstaller/resources/AEGP/img_export/: progress.txt
GradFixerInstaller/resources/GradFixer/: CriarComp.jsx  ExtrairGradiente.jsx  SplitGroup.jsx  SplitLayer.jsx  index.html  index.jsx  main.js  manifest.xml
GradFixerInstaller/src/: index.html  main.js  styles.css
GradFixerInstaller/src-tauri/: Cargo.toml  tauri.conf.json
GradFixerInstaller/src-tauri/capabilities/: default.json
GradFixerInstaller/src-tauri/icons/: icon.icns
GradFixerInstaller/src-tauri/src/: lib.rs  main.rs
VS_Project/: GradientManipulator.cpp  GradientManipulator_PiPL.r
VS_Project/Win/: GradientManipulator.cpp  GradientManipulator.vcxproj  GradientManipulator_PiPL.rc
test_scripts/: TestTextFromIL_AE.jsx  TestTextToAE_IL.jsx  download_youtube.py  download_yt4k.py  teste_ffmpeg.py
(+6 files in other folders)
