[package]
name = "gradfixerinstaller"
version = "1.0.8"
description = "GradFixer Installer"
authors = ["Felipe Barroso"]
edition = "2021"

[lib]
name = "gradfixerinstaller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
mac_address = "1.1.8"
reqwest = { version = "0.13.3", features = ["json"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
